Tue Jan 30 21:08:04 GMT 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * CXX/Elements.cpp
        * Tests/ComplexTypeImport/importee.xsd
        * XSC/Parser.hpp
        * XSC/Traversal/Fundamental.hpp
        * XSC/Traversal/Schema.hpp
        * XSC/Traversal/Elements.hpp
        * XSC/SemanticGraph/Fundamental.cpp
        * XSC/SemanticGraph/Element.hpp
        * XSC/SemanticGraph/Fundamental.hpp
        * XSC/SemanticGraph/Fundamental.cpp.m4
        * XSC/SemanticGraph/Fundamental.hpp.m4
        * XSC/SemanticGraph/Graph.tpp
        * XSC/Parser.cpp
        * xsc.cpp
        
          A number of changes imported from the old CVS repository,
          not gauranteed to compile.

Mon Jan 16 18:40:30 GMT 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * CXX/Header.cpp
        * CXX/Inline.cpp
        * CXX/Source.cpp
        * CXX/TraversalHeader.cpp
        * CXX/WriterHeader.cpp
        * CXX/WriterSource.cpp
        * IDL/Elements.cpp
        * XSC/Parser.cpp
        * XSC/Parser.hpp
        
        Addressed compile warnings, additional commenting, errors in
        generated code. 
        
Tue Dec 20 14:37:14  2005  William Otte  <wotte@dre.vanderbilt.edu>

	* Tests/Abstract/abstract.xsd

	Fixed a syntax error. 
	
2005-12-20  William Otte  <wotte@dre.vanderbilt.edu>

	* xsc.mpb
	* XSC.mwc
	* XSC/libXSC.mpc
	* CXX/libCXX.mpc
	* XSC.mpc
	* IDL/libIDL.mpc

	Updates to the mpc system to bring it up to speed with recent
	enhancements to MPC base projects.

2005-12-18  James H. Hill  <hillj@isis.vanderbilt.edu>
  * Tests/Abstract/abstract.xsd
  * Tests/Abstract/abstract.xml
  
  Added test case for abstract complex types

2005-12-07  William Otte  <wotte@dre.vanderbilt.edu>

	* CXX/WriterHeader.cpp

	Removed Borland specifc ifdefs to make the fix from:
	2005-10-03  William Otte  <wotte@dre.vanderbilt.edu>
	apply to all compilers.
	
	* Examples/Library/Reader/Makefile
	* Examples/Library/Writer/Makefile
