@@ -1,3 +1,14 @@
+Tue Jan 30 21:43:32 GMT 2007  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * CXX/Generator.cpp
+        * IDL/Generator.cpp
+        
+          Updated to work with recent changes to CommandLineParser
+        
+        * XSC/Parser.hpp
+        
+          Random compile error.
+
 Tue Jan 30 21:08:04 GMT 2007  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * CXX/Elements.cpp
